--- a/03-Pandas_and_DTM/02-DTM_DistinctiveWords.ipynb
+++ b/03-Pandas_and_DTM/02-DTM_DistinctiveWords.ipynb
@@ -655,9 +655,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise: \n",
+    "### Optional Exercise: \n",
     "\n",
-    "Use the difference of proportions calculation to compare two genres, or two artists, in the music reviews dataset. There are many ways you can do this. Think through the problem in steps. We'll go over a solution the week after next."
+    "Use the difference of proportions calculation to compare two genres, or two artists, in the music reviews dataset. There are many ways you can do this. Think through the problem in steps."
    ]
   }
  ],
