--- a/03-Pandas_and_DTM/00-PandasAndTextAnalysis_ExerciseSolutions.ipynb
+++ b/03-Pandas_and_DTM/00-PandasAndTextAnalysis_ExerciseSolutions.ipynb
@@ -16,7 +16,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas\n",
@@ -25,7 +27,7 @@
     "import matplotlib.pyplot as plt #note this last import statement. Why might we use \"import as\"?\n",
     "\n",
     "#read in our data\n",
-    "df = pandas.read_csv(\"../data/childrens_lit.csv.bz2\", sep = '\\t', encoding = 'utf-8', compression = 'bz2', index_col=0)\n",
+    "df = pandas.read_csv(\"../Data/childrens_lit.csv.bz2\", sep = '\\t', encoding = 'utf-8', compression = 'bz2', index_col=0)\n",
     "df = df.dropna(subset=[\"text\"])\n",
     "df['text_lc'] = df['text'].str.lower()\n",
     "df['text_split']=df['text_lc'].str.split()\n",
@@ -36,7 +38,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "##Ex: create a new column, 'text_type', which contains a list of unique token types\n",
@@ -47,7 +51,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "##Ex: create a new column, 'type_count', which is a count of the token types in each novel.\n",
@@ -61,7 +67,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "##Ex: Print the average ttr by author gender\n",
