--- a/03-Pandas_and_DTM/02-DTM_DistinctiveWords.ipynb
+++ b/03-Pandas_and_DTM/02-DTM_DistinctiveWords.ipynb
@@ -89,7 +89,7 @@
     "import pandas\n",
     "\n",
     "#create a dataframe called \"df\"\n",
-    "df = pandas.read_csv(\"../data/BDHSI2016_music_reviews.csv\", sep = '\\t', encoding = 'utf-8')\n",
+    "df = pandas.read_csv(\"../Data/BDHSI2016_music_reviews.csv\", sep = '\\t', encoding = 'utf-8')\n",
     "\n",
     "#view the dataframe\n",
     "#The column \"body\" contains our text of interest.\n",
@@ -99,7 +99,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#print the first review from the column 'body'\n",
@@ -125,7 +127,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Write your code here\n",
@@ -152,7 +156,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df['body'] = df['body'].apply(lambda x: ''.join([i for i in x if not i.isdigit()]))"
@@ -170,7 +176,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#import the function CountVectorizer\n",
@@ -192,7 +200,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(countvec.get_feature_names()[:10])"
@@ -210,7 +220,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#we do the same as we did above, but covert it into a Pandas dataframe. Note this takes quite a bit more memory, so will not be good for bigger data.\n",
@@ -239,7 +251,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(dtm_df.sum().sort_values(ascending=False))"
@@ -249,6 +263,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -307,6 +322,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -333,7 +349,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(dtm_tfidf_df.max().sort_values(ascending=False)[:20])"
@@ -366,7 +384,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#creat dataset with document index and genre\n",
@@ -377,7 +397,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#merge this into the dtm_tfidf_df\n",
@@ -417,7 +439,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#pull out the reviews for three genres, Rap, Alternative/Indie Rock, and Jazz\n",
@@ -457,7 +481,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "##Write your code here"
@@ -485,7 +511,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import nltk\n",
@@ -511,7 +539,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "novels_df = pandas.DataFrame(countvec.fit_transform(text_list).toarray(), columns=countvec.get_feature_names())\n",
@@ -532,7 +562,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "novels_df['word_count'] = novels_df.sum(axis=1)\n",
@@ -549,7 +581,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "novels_df = novels_df.iloc[:,:].div(novels_df.word_count, axis=0)\n",
@@ -566,7 +600,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "novels_df.loc[2] = novels_df.loc[0] - novels_df.loc[1]\n",
@@ -583,7 +619,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "novels_df.loc[2].sort_values(ascending=False)"
@@ -603,7 +641,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#change stop_words option to 'english\n",
@@ -629,7 +669,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Change max_df option to 1\n",
