--- a/03-Pandas_and_DTM/A-Bonus_LambdaFunctions.ipynb
+++ b/03-Pandas_and_DTM/A-Bonus_LambdaFunctions.ipynb
@@ -14,7 +14,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#import necessary modules\n",
@@ -23,7 +25,7 @@
     "import string\n",
     "\n",
     "#read in our data\n",
-    "df = pandas.read_csv(\"../data/childrens_lit.csv.bz2\", sep = '\\t', encoding = 'utf-8', compression = 'bz2', index_col=0)\n",
+    "df = pandas.read_csv(\"../Data/childrens_lit.csv.bz2\", sep = '\\t', encoding = 'utf-8', compression = 'bz2', index_col=0)\n",
     "#drop missing texts\n",
     "df = df.dropna(subset=['text'])\n",
     "#split the text into a list\n",
@@ -43,6 +45,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -62,6 +65,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -81,6 +85,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -109,6 +114,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -130,7 +136,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df['title_token_clean'] = df['title_token'].apply([word for word in x if word not in list(string.punctuation)])\n",
@@ -148,6 +156,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
