--- a/03-Pandas_and_DTM/00-PandasAndTextAnalysis.ipynb
+++ b/03-Pandas_and_DTM/00-PandasAndTextAnalysis.ipynb
@@ -63,9 +63,9 @@
     "\n",
     "**Data preparation**\n",
     "\n",
-    "I created a .csv file from a collection of 19th century children's literature. The data were compiled by students in this course: http://english197s2015.pbworks.com/w/page/93127947/FrontPage\n",
+    "I created a .csv file from a collection of 19th century children's literature. The data were compiled by [students in this course](http://english197s2015.pbworks.com/w/page/93127947/FrontPage).\n",
     "\n",
-    "The raw data are found here: http://dhresourcesforprojectbuilding.pbworks.com/w/page/69244469/Data%20Collections%20and%20Datasets#demo-corpora\n",
+    "The raw data are found [here](http://dhresourcesforprojectbuilding.pbworks.com/w/page/69244469/Data%20Collections%20and%20Datasets#demo-corpora).\n",
     "\n",
     "That page has additional corpora, so search through it to see if anything sparks your interest.\n",
     "\n",
