Updating Installation Check

--- a/00-Introduction/Installation_Check.ipynb
+++ b/00-Introduction/Installation_Check.ipynb
@@ -27,34 +27,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "sys.version_info.major"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Downloading the Material\n",
-    "\n",
-    "We will be working from a GitHub repository. There are two ways to download the material for use. \n",
-    "\n",
-    "1. Go the the [GitHub repository](https://github.com/lknelson/text-analysis-2017) and look for the green button on the right side that says \"Clone or download\". Click on it, and then click the \"Download ZIP\" option.\n",
-    "2. You can also *clone* the repository using Git:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "!git clone git@github.com:lknelson/text-analysis-2017.git"
+    "import sys\n",
+    "sys.version_info.major"
    ]
   },
   {
@@ -69,7 +48,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -94,7 +75,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%pylab inline"
@@ -114,7 +97,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nltk_data = [\"punkt\", \"words\", \"stopwords\", \"averaged_perceptron_tagger\", \"maxent_ne_chunker\", 'wordnet']\n",
